--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clear-require": "^3.0.0",
     "moment": "^2.29.4",
-    "selenium-webdriver": "^4.8.1"
+    "selenium-webdriver": "^4.8.1",
+    "sqlite3": "^5.1.4"
   }
 }
